tests/samples/negative/generics/generic_enum_base_non_integer.ax
module generic_enum_base_non_integer;

enum Flag<T>: bool {
    on(T) = 1,
    off = 0,
}

fn main() -> i32 {
    let value: Flag<i32> = Flag.on(1);
    return 0;
}
